syntax = "proto3";

package userverify;

service UserVerify {
  rpc VerifyUser (VerifyRequest) returns (VerifyReply) {}
}

// The request message containing the user's name.
message VerifyRequest {
  int id = 1;
  string token = 2;
}

// The response message containing the greetings
message VerifyReply {
  string message = 1;
}
